<resources>
    <string name="app_name">Check24</string>

    <string name="add">Add</string>
    <string name="number">Number</string>
    <string name="wrong_format">Number is expected</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>

    <string name="compute_sum">Sum values</string>
</resources>
